# ballbreaker

./: .antigravity-context.md  .coverage  README.md  main.py  pyproject.toml
scripts/: build_appimage.sh
src/ballbreaker/: __main__.py  cli.py
src/ballbreaker/core/: config.py  desktop_entry.py  extractor.py
src/ballbreaker/gui/: __init__.py  app.py  stylesheet.py
src/ballbreaker/gui/widgets/: __init__.py  dropzone.py
tests/: test_cli.py  test_config.py  test_desktop_entry.py  test_extractor.py  test_gui.py
