[project]
name = "ballbreaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
ballbreaker = "ballbreaker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


